feat: react-like

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angularjs-vite-app",
+  "name": "angularjs-reactlike-app",
   "version": "1.0.0",
   "private": true,
   "type": "module",
